external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_old_fun_fail.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/spec_parsing_old_fun_fail.move:5:10
  │
5 │     spec fun with_aborts_if {
  │          ^^^
  │          │
  │          Unexpected 'fun'
  │          Expected only 'spec', drop the 'fun' keyword

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/spec_parsing_old_fun_fail.move:5:29
  │
5 │     spec fun with_aborts_if {
  │                             ^
  │                             │
  │                             Unexpected '{'
  │                             Expected '('

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/spec_parsing_old_fun_fail.move:8:9
  │
5 │     spec fun with_aborts_if {
  │              -------------- Alias previously defined here
  ·
8 │     fun with_aborts_if(x: u64): u64 {
  │         ^^^^^^^^^^^^^^ Duplicate module member or alias 'with_aborts_if'. Top level names in a namespace must be unique

